  * googlecalendar: removed this deprecated plugin. Use htmlscrubber_skip
    instead.
  * embed: This plugin is deprecated, use htmlscrubber_skip instead.
    Closes: ##462970.
  * Version 3.00 of the plugin API.
  * Replace blank OpenID placeholder logo with an unofficial OpenID
    logo developed by Anna Hess. The official logo does not seem destined to
    be free.

 -- Joey Hess <joeyh@debian.org>  Wed, 24 Dec 2008 19:49:36 -0500

ikiwiki (2.72) unstable; urgency=low

  * Avoid comments in recentchanges being broken links (smcv)
  * Add deprecation warning for GlobLists, which will stop working in 3.0.
  * camelcase: Add camelcase_ignore setting.
  * googlecalendar: Add runtime deprecation warning.
  * comments: Deal with users entering unqualified or partial urls.
  * inline: Run format hook first, to ensure other format hooks can affect
    inlined content.  Closes: #509710

 -- Joey Hess <joeyh@debian.org>  Sun, 28 Dec 2008 15:01:02 -0500

ikiwiki (2.71) unstable; urgency=low

  * comments: Blog-style comment support, contributed by Simon McVittie.
  * htmlbalance: New plugin contributed by Simon McVittie.
  * Change deb dependencies to list Text::Markdown before markdown (really
    this time).
  * Improve escaping of wikilinks and preprocessor directives in content
    produced by aggregate and recentchanges.
  * French translation update from Philippe Batailler. Closes: #506250
  * Spanish translation update from Victor Moral.
  * Fix handling of wrappergroup option.
  * Correct --dumpsetup to include the srcdir in the setup file.
  * German translation update from Kai Wasserbäch. Closes: #507056
  * inline: Support emptyfeeds=no option to skip generating empty feeds.
  * inline: Support feedfile option to change the filename of the feed
    generated.
  * meta: Pass info to htmlscrubber so htmlscrubber_skip can take effect.
  * htmlbalance: don't compact whitespace, and set misc other options (smcv)