@@ -16,6 +16,7 @@ ikiwiki (3.00) UNRELEASED; urgency=low
   * Replace blank OpenID placeholder logo with an unofficial OpenID
     logo developed by Anna Hess. The official logo does not seem destined to
     be free.
+  * comments: Add cache avoidance.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 24 Dec 2008 19:49:36 -0500
 
